ghc-4335c07/testsuite/tests/deriving/should_compile/T12144_1.hs
{-# LANGUAGE DeriveAnyClass #-}
{-# LANGUAGE KindSignatures #-}
module T12144_1 where

class C (a :: * -> *)
data T a = MkT (a -> Int) deriving C
